manifests/deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "demo1-8e0e"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "demo1-8e0e"
  template:
    metadata:
      labels:
        app: "demo1-8e0e"
    spec:
      containers:
        - name: "demo1-8e0e"
          image: "demo119.azurecr.io/demo1"
          ports:
          - containerPort: 80
